<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapplication.default_fragment">

    <ListView
        android:id="@+id/namesList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:choiceMode="multipleChoice"
        android:textStyle="italic"
        android:textSize="48sp"
        android:divider="#774455">
    </ListView>
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Имя элемента:" />
    <EditText
        android:id="@+id/searchObj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <Button
        android:id="@+id/buttonSearch"
        android:onClick="add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_search" />
    <Button
        android:id="@+id/buttonAdd"
        android:onClick="add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add" />
    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_edit" />

    <Button
        android:id="@+id/buttonAllElem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_all"
        android:onClick="selectAllElem"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonSaveAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save_all"/>

        <Button
            android:id="@+id/buttonGetData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_get_all" />
        <Button
            android:id="@+id/buttonImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_import" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/buttonReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_reset"
            android:onClick="resetAllElem"/>
        <Button
            android:id="@+id/buttonElemInToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_output"
            android:onClick="outputSelectElem"/>
        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_delete"
            android:onClick="remove"/>
    </LinearLayout>

</LinearLayout>